[project]
name = "ticktick-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for TickTick task management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.30.0,<3.0.0",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.cli:main"
ticktick-auth = "ticktick_mcp.authenticate:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ticktick_mcp"]
